<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mLinearLayoutRowInfoRoot1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:layout_marginEnd="@dimen/dimen_5dp"
    android:layout_marginRight="@dimen/dimen_5dp"
    android:gravity="end"
    android:orientation="horizontal"
    android:padding="@dimen/dimen_5dp"

    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_rounded"
        android:orientation="vertical"
        android:padding="@dimen/dimen_5dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/mTxtMyName"
            style="@style/bodyTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@color/color_ffffff"

            android:maxLines="1"
            android:paddingLeft="@dimen/dimen_5dp"
            android:text="@string/chat_my_name"
            android:textColor="@color/color_8a000000"
            android:textSize="@dimen/dimen_12sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dimen_5dp"
            android:paddingRight="@dimen/dimen_5dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/mTxtChatMsg"
                style="@style/bodyTextStyle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/color_ffffff"
                android:maxLines="3"
                android:paddingBottom="@dimen/dimen_5dp"
                android:paddingRight="@dimen/dimen_5dp"
                android:paddingEnd="@dimen/dimen_5dp"
                android:text="@string/chat_message"
                android:textSize="@dimen/dimen_12sp"

                />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/myTimeStamp"
                style="@style/bodyTextStyle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/mTxtChatMsg"
                android:paddingBottom="@dimen/dimen_5dp"
                android:text="@string/time"

                >

            </android.support.v7.widget.AppCompatTextView>


        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="@dimen/dimen_35dp"
        android:layout_height="@dimen/dimen_35dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:layout_marginEnd="@dimen/dimen_15dp"
        android:layout_marginRight="@dimen/dimen_15dp"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:background="@drawable/circle_shape"
        android:padding="@dimen/dimen_3dp"
        app:layout_collapseMode="parallax">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/addToFavouriteImg"
            android:layout_width="@dimen/dimen_35dp"
            android:layout_height="@dimen/dimen_35dp"
            app:srcCompat="@drawable/fav_empty" />
    </RelativeLayout>
</LinearLayout>